Updated most of the Tech Report

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -17,7 +17,7 @@
 			<p><strong>Number of issues: 2</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
-		
+
 		<div class="col-lg-4">
 			<img class="img-circle" src="../static/images/nicholas.jpg" width="140" height="140">
 			<h2>Nicholas Cobb</h2>
@@ -106,30 +106,30 @@
 		This is a database report for the wildly popular card game Magic the Gathering! Using our application a user can search for and get details about the various cards in MTG.
 
 		<h3 style="margin-bottom: 15px;">Developers: SWEet Gathering</h3>
-		<p><u>Nestor Castro: Junior, Front-end, Hosting</u>
+		<p><u>Nestor Castro: Junior, <b>Front-end:</b> Hosting, <b>Back-end:</b> Database</u>
 		<br>
-		He is a 3rd year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.He was responsible for setting up the GCP server and updating the image of the website.</p>
+		He is a 3rd year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers. During Phase 1, he was responsible for setting up the GCP server and updating the image of the website. During Phase 2, he was responsible for creating and linking the GCP database, as well as setting up the proxy needed for connections to and from the database.</p>
 
-		<p><u>Nicholas Cobb: Junior, Front-end, Website</u>
+		<p><u>Nicholas Cobb: Junior, <b>Front-end:</b> Website</u>
 		<br>
-		He is a 3rd year Computer Science major at the university of Texas at Austin. He has interned at Google two times and am about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus.He was responsible for implementing the HTML, CSS and JavaScript/TypeScript for the website.</p>
+		He is a 3rd year Computer Science major at the University of Texas at Austin. He has interned at Google two times and am about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus. In Phase 1, he was responsible for implementing the HTML, CSS and JavaScript/TypeScript for the website. During Phase 2, he was responsible for updating bootstrap, the splash page, and implementing functionality for searching, filtering, and pagination.</p>
 
-		<p><u>Joel Davis: Senior, Front-end, API</u>
+		<p><u>Joel Davis: Senior, <b>Front-end:</b> API, <b>Back-end:</b> Testing, Models, Database Population <b>Phase 2 Leader</b></u>
 		<br>
-		He is a 4th-year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding.He was responsible for documenting the API with Apiary, writing unit tests, and setting up the team’s continuous integration framework with Travis CI.</p>
+		He is a 4th-year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding. During Phase 1, he was responsible for documenting the API with Apiary, writing unit tests, and setting up the team’s continuous integration framework with Travis CI. In Phase 2, apart from leading, he also was responsible for redesigning models and populating the database.</p>
 
-		<p><u>Nilo Lisboa: Senior, Back-End, <b>Phase 1 Leader</b></u>
+		<p><u>Nilo Lisboa: Senior, <b>Back-end:</b> Models and UML, <b>Front-end:</b> Content <b>Phase 1 Leader</b></u>
 		<br>
 		Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as archery and kendo.
-		He was responsible for designing the models and attributes in Phase 1 as well as creating the UML diagram.</p>
+		He was responsible for designing the models and attributes in Phase 1 as well as creating the UML diagram. In Phase 2, he was responsible for updating content on the website as well as acquiring the API JSON.</p>
 
-		<p><u>Matthew Martinez: Junior, Front-end, Design</u>
+		<p><u>Matthew Martinez: Junior, <b>Front-end:</b> Design, <b>Back-end:</b> Database</u>
 		<br>
-		Matthew is a third year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends. He was responsible for linking the custom domain and planning some of the general design of the website.</p> 
+		Matthew is a third year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends. In Phase 1, he was responsible for linking the custom domain and planning some of the general design of the website. During Phase 2, he was responsible for creating/linking the GCP database, and implementing the Flask framework. </p>
 
-		<p><u>Jose Ramirez: Senior, Back-End, Testing</u>
+		<p><u>Jose Ramirez: Senior, <b>Back-end:</b> Testing, Assets</u>
 		<br>
-		Jose is a 4th-year Computer Science major at the University of Texas at Austin. He enjoys game development and participates in ACM activities. In his free time, he plays video games and watches gaming streams on twitch. He was responsible for making unit tests and setting up continuous intergragtion framework with Travis CI.</p>
+		Jose is a 4th-year Computer Science major at the University of Texas at Austin. He enjoys game development and participates in ACM activities. In his free time, he plays video games and watches gaming streams on twitch. In Phase 1, he was responsible for making unit tests and setting up continuous intergragtion framework with Travis CI. During Phase 2, he helped sorting out library configurations and acquiring assets to be used on the website.</p>
 		<br>
 	</div>
 
@@ -138,23 +138,23 @@
 		<br>
 		<h4><em>What is the Problem?</em></h4>
 		<p>Magic the Gathering is a physical, and digital (came out at a later date), trading card game that pioneered this entire genre back in 1993 when it came out. It continues to thrive with millions of active players worldwide. With the age of the product though, comes the constant need for refreshment with the creation of new cards, game-modes, expansions containing hundreds of cards, and more. Due to that, nowadays, the game has over 16000 cards available and more than 70 card expansions. As a player, it is nigh impossible to pick out the cards you want for your deck, without being able to narrow down the search. The service we are creating would do just that.</p>
-		
+
 		<h4><em>Use Cases</em></h4>
 		<p>There are many use cases for such a database among players. Perhaps a player is looking for a specific card to put in their deck, but is unsure of what that card does, in which case a user can look for that card in our database to read up on its characteristics. Alternatively, Magic has many formats of play, and some of them can only make use of specific card sets. Standard format, the most popular, only allows players to build decks with the 2 most recent years of expansion releases. A player attempting to make standard a standard deck would look for cards among the sets that are permitted in that format by filtering our cards based on the sets they belong to. Some players specifically want cards that match an artstyle they like or just collect cards they think are pretty. In this case, a player would be able to look on our artist table and view which cards they worked on. Lastly, players could be trying to make Tribal decks, which look for cards of specific subtypes with the purpose of synergizing their effects. A user would then be able to visit our subtype table, and check out cards filtered by subtype, additionally, if they don’t even know which subtype they want to pick for a deck, there will be example cards of those subtypes available for users to view.</p>
 
 		<img src="/static/images/UML.png" style = "width:25%; margin-right: 10px;" align="left">
-		<h4><em>Models</em></h4>
-		<p>Cards - This model contains information specifically regarding cards as implied in a card game, they are of immense importance and thus, have a large number of attributes. Cards have unique IDs identifying each of them</p>report
-		<p>Set - This model contains information pertaining to sets, which in turn, are like containers upon which cards are released in MtG. Sets are a very helpful way to distinguish cards from each other. The Set model also has relations to all other models.</p>
-		<p>Artist - The artist model serves as another method for a user to distinguish cards, as many cards could have been worked on by a specific artist. This model is related to the Set and the Card model.</p>
-		<p>Subtype - The Subtype model serves as a final way to distinguish cards. Cards that have similar subtypes often synergize their effects, so it is important to be able to select subtypes of interest and view all related cards. This model is related to the Card and Set models.</p>
+		<h4><em>Database Models</em></h4>
+		<p><b>MCard</b> - The model for a Card, it includes the attributes: cardID, name, mainType, subType, text, expansionSet, manaCost, color, power, toughness, art, rarity, and artist. This model contains information pertaining to sets, which in turn, are like containers upon which cards are released in MtG. Sets are a very helpful way to distinguish cards from each other.</p>report
+		<p><b>MSet</b> - The model for a set, it includes the attributes: code, name, rDate, block, cards, numCards, symbol. The cards attribute is a relationship. Any time a card is instantiated to the database, a relationship is established between a set and any cards that are in that set. This model contains information pertaining to sets, which in turn, are like containers upon which cards are released in MtG. Sets are a very helpful way to distinguish cards from each other.</p>
+		<p><b>MArtist</b> - The model for an artist, it includes the attributes: name, numCards, numSets, and cards. The cards attribute is a relationship. Any time a card is instantiated to the database, a relationship is established between an artist and any cards that the particular artist designed. This model  serves as another method for a user to distinguish cards, as many cards could have been worked on by a specific artist.</p>
+		<p><b>MSubtype</b> - The model for a subtype, it includes the attributes: name, numCards, sets, and cards. Any time a card is instantiated to the database, if that card has a valid subtype, a relationship is established between that subtype and any cards that share the same subtype attribute. Cards that have similar subtypes often synergize their effects, so it is important to be able to select subtypes of interest and view all related cards. This model is related to the MCard and MSet models.</p>
 		<br>
 		<h4><em>Relations<em></h4>
-		<p>[Card] many-to-many [Subtype]
-		[Card] many-to-one [Set]<br>
-		[Card] many-to-one [Artist]<br><br>
-		[Set] many-to-many [Artist]<br>
-		[Set] many-to-many [Subtype]</p>
+		<p>[MCard] many-to-many [MSubtype]
+		[MCard] many-to-one [MSet]<br>
+		[MCard] many-to-one [MArtist]<br><br>
+		[MSet] many-to-many [MArtist]<br>
+		[MSet] many-to-many [MSubtype]</p>
 	</div>
 
 	<div id="design-sec" class="about-section" style="clear: both;">
@@ -209,20 +209,24 @@
 		<br>
 		<h4><em>Front End</em></h4>
 		<p><u>Bootstrap</u>- Bootstrap is a popular framework for the front-end aspect of web projects. It facilitates design by providing various pre-designed, responsive HTML elements such as buttons, menus, navigation bars, search bars, input boxes and more. The CSS classes included with Bootstrap work with the HTML elements to facilitate the creation of a sleek, customizable interface for a website.</p>
-		
+
 		<p><u>jQuery</u>- jQuery is a small and powerful JavaScript library that simplifies tasks like HTML DOM traversal, HTML DOM editing, and event handling much simpler. jQuery is used with Bootstrap to help create a smooth front-end to a web project.</p>
-		
+
+		<p><u>React JS</u>- React JS is a JavaScript development framework for facilitating the development of front-end web projects. It is an open-source project maintained by Facebook, Instagram and individual developers. It is good for creating large web applications with data that changes over time.</p>
+
 		<p><u>Angular 2</u>- Angular 2 is a development platform for building responsive web applications using TypeScript or JavaScript. It facilitates the use of TypeScript or JavaScript by organizing the code into manageable components.</p>
 		<br>
 		<h4><em>Back End</em></h4>
-		<p><u>Flask</u>- Flask is a framework for Python based on Werkzeug and Jinja 2.</p>
-		
-		<p><u>SQLAlcehmy</u>- </p>
-		
-		<p><u>Google Cloud Platform</u>- The Google Cloud Platform is a means of hosting our website. It provides the ability to create and edit a website in the cloud. The details of the hosting are described in the “Hosting” section below.</p>
+		<p><u>Flask</u>- Flask is a framework for Python based on Werkzeug and Jinja 2. It can be used for implementing Python code and designing templates. We mostly used Flask in setting up the link routes to the different pages and rendering the templates for the different HTML pages. Flask also worked in tandem with Jinja 2.</p>
+
+		<p><u>Jinja 2</u>- Jinja 2 allowed us to work simultaneously with flask especially when it came with the base templates, and passing in variables to the templates at runtime. It allows us to mix the html code and backend python to provide a seamless customizable user experience. In particular it eased the process of iterating through large amounts of data, such as the database models. We could dynamically read from the models in the database, and then pass the variables into the html code and render the individual unique pages.</p>
+
+		<p><u>SQLAlchemy</u>- </p>
+
+		<p><u>Google Cloud Platform</u>- The Google Cloud Platform is a means of hosting our website. It provides the ability to create and edit a website in the cloud. The details of the hosting are described in the “Hosting” section below. It also hosts our cloud database that we read and write from in order to populate the instances of our models. We are able to host on individual computers by whitelisting IP’s for our database instance. In order to deploy to the cloud, we set up a CloudSQL proxy on Nestor’s computer so that the cloud data can link with the local code. After deploying from the proxy server, the database is linked and any changes we make to the data are added dynamically. Different methods were tried in the attempt to host and link the database. After many attempts, we were able to find something that worked both locally and in the cloud.</p>
 		<br>
 		<h4><em>Embedding-Media Services</em></h4>
-		<p>To embed media into the website, we will use Bootstrap and Angular 2, as described in the “Front End” subsection of “Tools”. The Bootstrap library includes features to allow for simple media embedding.</p>
+		<p>To embed media into the website, we will use Bootstrap and Angular 2, as described in the “Front End” subsection of “Tools”. The Bootstrap library includes features to allow for simple media embedding. The React JS framework include features to allow for simple media embedding. React JS provides a smooth JavaScript interface to abstract away some of the difficulties of programming in plain JavaScript. Bootstrap is used to make the embedded media aesthetically pleasing.</p>
 		<br>
 		<h4><em>Communication/Other</em></h4>
 		<p><u>GitHub</u>- GitHub is used for version control for our project. Every member of our group pushed to the same public GitHub repository, to bring the entire project together, even when we were working separately or remotely. If there is ever an issue with an update to the code, rolling back to an old version is simple and quick. When one member makes a change, other members can easily see what code was removed or added, so we could pick up where someone else left off. Another helpful tool GitHub provides is the Issue Tracker. It’s an easy way to see what tasks need to be done, as well as keep track of bugs that need to be fixed.</p>
@@ -242,6 +246,7 @@
 		<p>After having created an account and looked over some tutorials, we went on to create a new project. Having created a new project inside the console, we moved on to the hosting process and downloaded the Google Cloud SDK. The SDK, which is a set of tools allowing you to access various services in the Google Cloud Platform, would later allow us to deploy, browse, and do other things to our app. We then created a new directory (inside the same directory in which the SDK directory was located) and named it the same name as our Project-ID, as required. We followed a sample directory structure provided by Google’s “Hosting a static website on Google App engine” guide, and included all the files needed to deploy our web app. </p>
 		<br>
 		<h4><em>Project-ID Directory</em></h4>
+		<p>In the first phase of our project, we tried to do all of our app routing through the app.yaml file as described below (We later migrated and refactored our code so that we could use flask instead):</p>
 		<p>One file in particular, the “app.yaml” file, required us to do quite some research. This file works as a sort of “makefile” and maps URLs to your static files so the web app can be displayed on your browser, therefore making sure it was properly implemented was extremely important. Also, along with the .yaml file we had our .html, .css, and image files in there respective folders so we made sure that every time something was added, deleted or moved, the .yaml file was updated. </p>
 		<br>
 		<h4><em>Deploying the App</em></h4>
