--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -38,6 +38,7 @@ html, body {
 .index-descr {
   color: #000;
   text-align: center;
+  /*font-family: "Times New Roman", Times, serif;*/
   /*font-size: 48px;
   font-size: 4vw;*/
 }
