--- a/app/templates/artists.html
+++ b/app/templates/artists.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%}
 
 {%block content%}
-	<link rel="stylesheet" type="text/css" href="../static/css/models.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/models.css">
 		<script type="text/babel">
 		function SortOption(props) {
 			return (
