--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/"><img src="static/images/MainLogo.png" id="bar-logo" style="position: relative; width: 80px; top: -8px;"></a>
+					<a class="navbar-brand" href="/"><img src="/static/images/MainLogo.png" id="bar-logo" style="position: relative; width: 80px; top: -8px;"></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
