--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -99,7 +99,8 @@
 		<h4>4. <a href="#tools-sec">Tools</a></h4>
 		<h4>5. <a href="#hosting">Hosting</a></h4>
 	</div>
-
+	<div class="divider"></div><div class="divider"></div>
+	<center><h2><a href = "/run-tests">Run Tests</a></h2></center>
 	<div class="divider"></div><div class="divider"></div>
 
 	<div id="report" class="about-section">
