--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -13,8 +13,8 @@
 			<h2>Nestor Castro</h2>
 			<p>Nestor is a 3rd-year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. In his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
 			<p><strong>Responsibilities: </strong>front-end, hosting</p>
-			<p><strong>Number of commits: 9</strong></p>
-			<p><strong>Number of issues: 2</strong></p>
+			<p><strong>Number of commits: 23</strong></p>
+			<p><strong>Number of issues: 4</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
 
@@ -23,7 +23,7 @@
 			<h2>Nicholas Cobb</h2>
 			<p>Nicholas is a 3rd-year Computer Science major at the University of Texas at Austin. Nicholas has interned at Google two times and is about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus.</p>
 			<p><strong>Responsibilities: </strong>front-end, coding</p>
-			<p><strong>Number of commits: 27</strong></p>
+			<p><strong>Number of commits: 41</strong></p>
 			<p><strong>Number of issues: 1</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
@@ -33,7 +33,7 @@
 			<h2>Joel Davis</h2>
 			<p>Joel is a 4th-year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding.</p>
 			<p><strong>Responsibilities: </strong>back-end, API</p>
-			<p><strong>Number of commits: 30</strong></p>
+			<p><strong>Number of commits: 50</strong></p>
 			<p><strong>Number of issues: 0</strong></p>
 			<p><strong>Number of unit tests: 6</strong></p>
 		</div>
@@ -43,7 +43,7 @@
 			<h2>Nilo Lisboa</h2>
 			<p>Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as archery and kendo.</p>
 			<p><strong>Responsibilities: </strong>back-end, Phase I Leader</p>
-			<p><strong>Number of commits: 9</strong></p>
+			<p><strong>Number of commits: 21</strong></p>
 			<p><strong>Number of issues: 0</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
@@ -53,8 +53,8 @@
 			<h2>Matthew Martinez</h2>
 			<p>Matthew is a 3rd-year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends.</p>
 			<p><strong>Responsibilities: </strong>front-end, design</p>
-			<p><strong>Number of commits: 14</strong></p>
-			<p><strong>Number of issues: 13</strong></p>
+			<p><strong>Number of commits: 35</strong></p>
+			<p><strong>Number of issues: 24</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
 
@@ -63,7 +63,7 @@
 			<h2>Jose Ramirez</h2>
 			<p>Jose is a 4th-year Computer Science major at the University of Texas at Austin. He enjoys game development and participates in ACM activities. In his free time, he plays video games and watches gaming streams on Twitch. </p>
 			<p><strong>Responsibilities: </strong>back-end, testing</p>
-			<p><strong>Number of commits: 11</strong></p>
+			<p><strong>Number of commits: 21</strong></p>
 			<p><strong>Number of issues: 0</strong></p>
 			<p><strong>Number of unit tests: 6</strong></p>
 		</div>
@@ -73,8 +73,8 @@
 
 	<div id="stats" class="about-section">
 		<h1><strong>Stats</strong></h1>
-		<p><strong>Number of commits: 100</strong></p>
-		<p><strong>Number of issues: 16</strong></p>
+		<p><strong>Number of commits: 191</strong></p>
+		<p><strong>Number of issues: 29</strong></p>
 		<p><strong>Number of unit tests: 12</strong></p>
 		<p><strong><a href="http://docs.apimagicthegatheringio.apiary.io">Link to Apiary API</strong></p>
 		<p><strong><a href="https://github.com/jtd2226/magicdbswe/issues">Link to Github Issue Tracker</a></strong></p>
@@ -143,7 +143,7 @@
 		<h4><em>Use Cases</em></h4>
 		<p>There are many use cases for such a database among players. Perhaps a player is looking for a specific card to put in their deck, but is unsure of what that card does, in which case a user can look for that card in our database to read up on its characteristics. Alternatively, Magic has many formats of play, and some of them can only make use of specific card sets. Standard format, the most popular, only allows players to build decks with the 2 most recent years of expansion releases. A player attempting to make standard a standard deck would look for cards among the sets that are permitted in that format by filtering our cards based on the sets they belong to. Some players specifically want cards that match an artstyle they like or just collect cards they think are pretty. In this case, a player would be able to look on our artist table and view which cards they worked on. Lastly, players could be trying to make Tribal decks, which look for cards of specific subtypes with the purpose of synergizing their effects. A user would then be able to visit our subtype table, and check out cards filtered by subtype, additionally, if they don’t even know which subtype they want to pick for a deck, there will be example cards of those subtypes available for users to view.</p>
 
-		<img src="/static/images/UML.png" style = "width:50%; margin-right: 10px;" align="left">
+		<img src="/static/images/UML2.png" style = "width:50%; margin-right: 10px;" align="left">
 		<h4><em>Database Models</em></h4>
 		<p><b>MCard</b> - The model for a Card, it includes the attributes: cardID, name, mainType, subType, text, expansionSet, manaCost, color, power, toughness, art, rarity, and artist. This model contains information pertaining to sets, which in turn, are like containers upon which cards are released in MtG. Sets are a very helpful way to distinguish cards from each other.</p>
 		<p><b>MSet</b> - The model for a set, it includes the attributes: code, name, rDate, block, cards, numCards, symbol. The cards attribute is a relationship. Any time a card is instantiated to the database, a relationship is established between a set and any cards that are in that set. This model contains information pertaining to sets, which in turn, are like containers upon which cards are released in MtG. Sets are a very helpful way to distinguish cards from each other.</p>
