--- a/app/templates/subtypes-instance.html
+++ b/app/templates/subtypes-instance.html
@@ -9,43 +9,24 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script>
-		var getUrlParams = function() {
-		    var vars = [], hash;
-		    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-		    for(var i = 0; i < hashes.length; i++)
-		    {
-		        hash = hashes[i].split('=');
-		        vars.push(hash[0]);
-		        vars[hash[0]] = hash[1];
-		    }
-		    return vars;
-		}
-		var subtypeName = getUrlParams()["name"].substring(3, getUrlParams()["name"].length - 3);
 
+	<h1>{{subtypes_instance.name}}</h1>
+	<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card" class="img-fluid">
+	<h4><strong>Number of Cards: </strong>{{subtypes_instance.numCards}}</h4>
+	<h4>
 
-		var xmlHttp = new XMLHttpRequest();
+		<strong>Sets:</strong><br>
+		{% for set in subtypes_instance.ssets.all() %}
+			{{set.name}}
+			<br>
+		{% endfor %}
+	</h4>
+	<h4>
 
-		xmlHttp.onreadystatechange = function() {
-		    if (this.readyState == 4 && this.status == 200) { //Successful GET request
-		        var card = JSON.parse(this.responseText);
-
-		        // Append to the DOM
-				$("#instance-main").append("<h1>" + subtypeName + "</h1>");
-				$("#instance-main").append("<img src=" + card["card"]["imageUrl"] + ">");
-
-				setName = card["card"]["setName"] || "N/A"
-				$("#instance-main").append("<h4><strong>Sets: </strong>" + setName + "</h4>");
-
-				$("#instance-main").append("<h4><strong>Cards: </strong>" + card["card"]["name"] + "</h4>");
-				$("#instance-main").append("<h4><strong>Number of Cards: </strong>1</h4>");
-		    }
-		};
-
-		
-		var cardId = getUrlParams()["id"];
-	    xmlHttp.open("GET", "https://api.magicthegathering.io/v1/cards/" + cardId, true); 
-	    xmlHttp.send(null);
-	</script>
-
+		<strong>Cards:</strong><br>
+		{% for card in subtypes_instance.xcards.all() %}
+			{{card.name}}
+			<br>
+		{% endfor %}
+	</h4>
 {% endblock %}
