--- a/app/templates/subtypes.html
+++ b/app/templates/subtypes.html
@@ -5,7 +5,7 @@
 	<script type="text/babel">
 		function SortOption(props) {
 			return (
-				<ol>
+				<ol className="sort-button">
 					<button className="btn btn-default"><a href={props.link}>{props.name}</a></button>
 				</ol>
 			);
@@ -13,6 +13,13 @@
 
 		function sortOrderChange() {
 			$("#sort-order").toggleClass("glyphicon-arrow-down glyphicon-arrow-up");
+			$(".sort-button a").each(function() {
+				if (this.href.indexOf("desc") !== -1) {
+					this.href = this.href.replace("desc", "asce");
+				} else {
+					this.href = this.href.replace("asce", "desc");
+				}
+			});
 		}
 			
 		function SortList() {
@@ -22,9 +29,9 @@
 					    Sort By: <span id="sort-order" className="glyphicon glyphicon-arrow-down" onClick={sortOrderChange}></span>
 					</button>
 					<ul className="dropdown-menu">
-						<SortOption name="Name" link="/subtypes/sort/name"/>
-						<SortOption name="Number of Cards" link="/subtypes/sort/numCards"/>
-						<SortOption name="Number of Sets" link="/subtypes/sort/numSets"/>
+						<SortOption name="Name" link="/subtypes/sort/name&desc"/>
+						<SortOption name="Number of Cards" link="/subtypes/sort/numCards&desc"/>
+						<SortOption name="Number of Sets" link="/subtypes/sort/numSets&desc"/>
 					</ul>
 				</div>
 			);
@@ -39,12 +46,20 @@
 			return (
 				<ol>
 					<label className="checkbox-inline">
-						<input type="checkbox" value=""></input>
+						<input type="checkbox" id={"filter-check-" + props.name.toLowerCase().replace(/\s/g,'')} value=""></input>
 						{props.name}
 					</label>
 					<input type="text" className="form-control" id={"filter-" + props.name.toLowerCase().replace(/\s/g,'')}></input>
 				</ol>
 			);
+		}
+
+		function filterApply() {
+			var numCards = document.getElementById("filter-check-numberofcards").checked ? $("#filter-numberofcards").val() : "NO-NUMCARD";
+			var numSets = document.getElementById("filter-check-numberofsets").checked ? $("#filter-numberofsets").val() : "NO-NUMSETS";
+			var setName = document.getElementById("filter-check-set").checked ? $("#filter-set").val() : "NO-SETNAME";
+
+			window.location.href = "/subtypes/filter/" + (numCards ? numCards : "NO-NUMCARD") + "&" + (numSets ? numSets : "NO-NUMSETS") + "&" + (setName ? setName : "NO-SETNAME");
 		}
 			
 		function FilterList() {
@@ -57,6 +72,7 @@
 						<FilterOption name="Number of Cards"/>
 						<FilterOption name="Number of Sets"/>
 						<FilterOption name="Set"/>
+						<ol><button className="btn btn-default" onClick={filterApply}>Filter!</button></ol>
 					</ul>
 				</div>
 			);
