--- a/app/templates/sets-instance.html
+++ b/app/templates/sets-instance.html
@@ -2,53 +2,49 @@
 
 {%block content%}
 
-	<link rel="stylesheet" type="text/css" href="css/instance.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/instance.css">
 	<div id="instance-main">
+		<h1>{{sets_instance.name}}</h1>
+		<img src={{sets_instance.symbol}} class="img-fluid">
+
+		<h4><strong>Code: </strong>{{sets_instance.code}}</h4>
+		<h4><strong>Release Date: </strong>{{sets_instance.rDate}}</h4>
+		<h4><strong>Block: </strong>{{sets_instance.block}}</h4>
+		<h4><strong>Number of Cards: </strong>{{sets_instance.numCards}}</h4>
+		<h4>
+
+			<strong>Subtypes:</strong><br>
+			{% if sets_instance.cards.all() %}
+				{% for subtype in sets_instance.subTypes %}
+					{{subtype.name}}
+					<br>
+				{% endfor %}
+			{% endif %}
+		</h4>
+		<h4>
+
+			<strong>Cards:</strong><br>
+			{% if sets_instance.cards.all() %}
+				{% for card in sets_instance.cards.all() %}
+					{{card.name}}
+					<br>
+				{% endfor %}
+			{% endif %}
+		</h4>
+		<h4>
+
+			<strong>Artists:</strong><br>
+			{% for artist in sets_instance.xartists.all() %}
+				{{artist.name}}
+				<br>
+			{% endfor %}
+		</h4>
 	</div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script>
-		var getUrlParams = function() {
-		    var vars = [], hash;
-		    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-		    for(var i = 0; i < hashes.length; i++)
-		    {
-		        hash = hashes[i].split('=');
-		        vars.push(hash[0]);
-		        vars[hash[0]] = hash[1];
-		    }
-		    return vars;
-		}
-
-
-		var xmlHttp = new XMLHttpRequest();
-
-		xmlHttp.onreadystatechange = function() {
-		    if (this.readyState == 4 && this.status == 200) { //Successful GET request
-		        var set = JSON.parse(this.responseText);
-
-		        // Append to the DOM
-				$("#instance-main").append("<h1>" + set["set"]["name"] + "</h1>");
-				
-				code = set["set"]["code"] || "N/A"
-				$("#instance-main").append("<h4><strong>Code: </strong>" + code + "</h4>");
-
-				rDate = set["set"]["releaseDate"] || "N/A"
-				$("#instance-main").append("<h4><strong>Release Date: </strong>" + rDate + "</h4>");
-
-				block =  set["set"]["block"] || "N/A"
-				$("#instance-main").append("<h4><strong>Block: </strong>" + block + "</h4>");
-
-				$("#instance-main").append("<h4><strong>Cards: </strong>" + getUrlParams()["cards"].substring(3, getUrlParams()["cards"].length - 3).replace("%20", " ") + "</h4>");
-
-				$("#instance-main").append("<h4><strong>Block: </strong>" + block + "</h4>");
-
-				$("#instance-main").append("<h4><strong>Subtype: </strong>N/A</h4>");
-				$("#instance-main").append("<h4><strong>Number of Cards: </strong>1</h4>");
-				$("#instance-main").append("<h4><strong>Symbol: </strong>N/A</h4>");
-
+	<!--<script>
 				$("#instance-main").append("<h4><strong>Artists: </strong>" + getUrlParams()["name"].substring(3, getUrlParams()["name"].length - 3).replace("%20", " ") + "</h4>");
 		    }
 		};
@@ -56,6 +52,6 @@
 		var code = getUrlParams()["code"].substring(3, getUrlParams()["code"].length - 3);
 	    xmlHttp.open("GET", "https://api.magicthegathering.io/v1/sets/" + code, true); 
 	    xmlHttp.send(null);
-	</script>
+	</script>-->
 
 {%endblock%}
