--- a/app/templates/sets.html
+++ b/app/templates/sets.html
@@ -82,7 +82,6 @@
 			document.getElementById('filtering-options')
 		);
 	</script>
-
 	<div class="magicdb-header">
 		<h1>Sets</h1>
 		<h3>Cards are released in different sets, here are some of them. </h3>
@@ -97,6 +96,17 @@
 				<h4><a href={{"/sets/" + set.code}}>{{set.name}}</a></h4>
 			</div>
 		{% endfor %}
+	</div>
+
+	<div id="mdb-pagination">
+		<nav>
+			<ul class="pagination">
+				{% if page > 1 %}
+					<li class="page-item"><a class="page-link" href={{prev_page(request.path)}}>Previous</a></li>
+				{% endif %}
+				<li class="page-item"><a class="page-link" href={{next_page(request.path)}}>Next</a></li>
+			</ul>
+		</nav>
 	</div>
 <!--
 	<div class="container-fluid">
