--- a/app/templates/cards-instance.html
+++ b/app/templates/cards-instance.html
@@ -2,72 +2,25 @@
 
 {%block content%}
 
-<link rel="stylesheet" type="text/css" href="css/instance.css">
+<link rel="stylesheet" type="text/css" href="/static/css/instance.css">
 <div id="instance-main">
+	<h1><strong>{{cards_instance.name}}</strong></h1>
+	<img src={{cards_instance.art}}>
+
+	<h4><strong>Text: </strong>{{cards_instance.text}}</h4>
+	<h4><strong>Type: </strong>{{cards_instance.mainType}}</h4>
+	<h4><strong>Subtype: </strong>{{cards_instance.subType.name}}</h4>
+	<h4><strong>Set Name: </strong>{{cards_instance.expansionSet}}</h4>
+	<h4><strong>Mana Cost: </strong>{{cards_instance.manaCost}}</h4>
+	<h4><strong>Color: </strong>{{cards_instance.color}}</h4>
+	<h4><strong>Power: </strong>{{cards_instance.power}}</h4>
+	<h4><strong>Toughness: </strong>{{cards_instance.toughness}}</h4>
+	<h4><strong>Rarity: </strong>{{cards_instance.rarity}}</h4>
+	<h4><strong>Artist: </strong>{{cards_instance.artist}}</h4>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script>
-	var getUrlParams = function() {
-	    var vars = [], hash;
-	    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-	    for(var i = 0; i < hashes.length; i++)
-	    {
-	        hash = hashes[i].split('=');
-	        vars.push(hash[0]);
-	        vars[hash[0]] = hash[1];
-	    }
-	    return vars;
-	}
-
-
-	var xmlHttp = new XMLHttpRequest();
-
-	xmlHttp.onreadystatechange = function() {
-	    if (this.readyState == 4 && this.status == 200) { //Successful GET request
-	        var card = JSON.parse(this.responseText);
-
-	        // Append to the DOM
-			$("#instance-main").append("<h1>" + card["card"]["name"] + "</h1>");
-			$("#instance-main").append("<img src=" + card["card"]["imageUrl"] + ">");
-			
-			text = card["card"]["text"] || "N/A"
-			$("#instance-main").append("<h4><strong>Text: </strong>" + text + "</h4>");
-
-			type = card["card"]["types"] || "N/A"
-			$("#instance-main").append("<h4><strong>Types: </strong>" + type + "</h4>");
-
-			subtype = card["card"]["subtypes"] || "N/A"
-			$("#instance-main").append("<h4><strong>Subtypes: </strong>" + subtype + "</h4>");
-
-			setName = card["card"]["setName"] || "N/A"
-			$("#instance-main").append("<h4><strong>Set Name: </strong>" + setName + "</h4>");
-
-			manaCost = card["card"]["cmc"] || "N/A"
-			$("#instance-main").append("<h4><strong>Mana Cost: </strong>" + manaCost + "</h4>");
-
-			colors = card["card"]["colors"] || "N/A"
-			$("#instance-main").append("<h4><strong>Colors: </strong>" + colors + "</h4>");
-
-			power = card["card"]["power"] || "N/A"
-			$("#instance-main").append("<h4><strong>Power: </strong>" + power + "</h4>");
-
-			toughness = card["card"]["toughness"] || "N/A"
-			$("#instance-main").append("<h4><strong>Toughness: </strong>" + toughness + "</h4>");
-
-			rarity = card["card"]["rarity"] || "N/A"
-			$("#instance-main").append("<h4><strong>Rarity: </strong>" + rarity + "</h4>");
-
-			artist = card["card"]["artist"] || "N/A"
-			$("#instance-main").append("<h4><strong>Artist: </strong>" + artist + "</h4>");
-	    }
-	};
-
-	var cardId = getUrlParams()["id"];
-    xmlHttp.open("GET", "https://api.magicthegathering.io/v1/cards/" + cardId, true); 
-    xmlHttp.send(null);
-</script>
 
 {% endblock%}
