--- a/app/templates/cards.html
+++ b/app/templates/cards.html
@@ -5,14 +5,21 @@
 	<script type="text/babel">
 		function SortOption(props) {
 			return (
-				<ol>
-					<button className="btn btn-default">{props.name}</button>
+				<ol className="sort-button">
+					<button className="btn btn-default"><a href={props.link}>{props.name}</a></button>
 				</ol>
 			);
 		}
 
 		function sortOrderChange() {
 			$("#sort-order").toggleClass("glyphicon-arrow-down glyphicon-arrow-up")
+			$(".sort-button a").each(function() {
+				if (this.href.indexOf("desc") !== -1) {
+					this.href = this.href.replace("desc", "asce");
+				} else {
+					this.href = this.href.replace("asce", "desc");
+				}
+			});
 		}
 			
 		function SortList() {
@@ -22,13 +29,13 @@
 					    Sort By: <span id="sort-order" className="glyphicon glyphicon-arrow-down" onClick={sortOrderChange}></span>
 					</button>
 					<ul className="dropdown-menu">
-						<SortOption name="Name"/>
-						<SortOption name="Mana Cost"/>
-						<SortOption name="Power"/>
-						<SortOption name="Toughness"/>
-						<SortOption name="Rarity"/>
-						<SortOption name="Color"/>
-						<SortOption name="Type"/>
+						<SortOption name="Name" link="/cards/sort/name&desc"/>
+						<SortOption name="Mana Cost" link="/cards/sort/manaCost&desc"/>
+						<SortOption name="Power" link="/cards/sort/power&desc"/>
+						<SortOption name="Toughness" link="/cards/sort/toughness&desc"/>
+						<SortOption name="Rarity" link="/cards/sort/rarity&desc"/>
+						<SortOption name="Color" link="/cards/sort/color&desc"/>
+						<SortOption name="Type" link="/cards/sort/type&desc"/>
 					</ul>
 				</div>
 			);
@@ -43,12 +50,23 @@
 			return (
 				<ol>
 					<label className="checkbox-inline">
-						<input type="checkbox" value=""></input>
+						<input type="checkbox" id={"filter-check-" + props.name.toLowerCase().replace(/\s/g,'')} value=""></input>
 						{props.name}
 					</label>
 					<input type="text" className="form-control" id={"filter-" + props.name.toLowerCase().replace(/\s/g,'')}></input>
 				</ol>
 			);
+		}
+
+		function filterApply() {
+			var manaCost = document.getElementById("filter-check-manacost").checked ? $("#filter-manacost").val() : "NO-MANA";
+			var power = document.getElementById("filter-check-power").checked ? $("#filter-power").val() : "NO-POWER";
+			var toughness = document.getElementById("filter-check-toughness").checked ? $("#filter-toughness").val() : "NO-TOUGH";
+			var rarity = document.getElementById("filter-check-rarity").checked ? $("#filter-rarity").val() : "NO-RARITY";
+			var color = document.getElementById("filter-check-color").checked ? $("#filter-color").val() : "NO-COLOR";
+			var type = document.getElementById("filter-check-type").checked ? $("#filter-type").val() : "NO-TYPE";
+
+			window.location.href = "/cards/filter/" + (manaCost ? manaCost : "NO-MANA") + "&" + (power ? power : "NO-POWER") + "&" + (toughness ? toughness : "NO-TOUGH") + "&" + (rarity ? rarity : "NO-RARITY") + "&" + (color ? color : "NO-COLOR") + "&" + (type ? type : "NO-TYPE");
 		}
 			
 		function FilterList() {
@@ -64,6 +82,7 @@
 						<FilterOption name="Rarity"/>
 						<FilterOption name="Color"/>
 						<FilterOption name="Type"/>
+						<ol><button className="btn btn-default" onClick={filterApply}>Filter!</button></ol>
 					</ul>
 				</div>
 			);
@@ -85,9 +104,31 @@
 		{% for card in cards %}
 			<div class="model-inst">
 				<img src={{card.art}} class="img-fluid">
-				<h4><a href={{"/card/" + card.name}}>{{card.name}}</a></h4>
+				<h4><a href={{"/cards/" + card.cardId}}>{{card.name}}</a></h4>
 			</div>
 		{% endfor %}
+	</div>
+
+	<div id="mdb-pagination">
+		<nav>
+			<ul class="pagination">
+				{% if page > 1 %}
+					<li class="page-item"><a class="page-link" href={{"/cards/" ~ (page - 1)}}>Previous</a></li>
+				{% endif %}
+				<li class="page-item"><a class="page-link" href={{"/cards/" ~ (page + 1)}}>Next</a></li>
+			</ul>
+		</nav>
+	</div>
+
+	<div id="mdb-pagination">
+		<nav>
+			<ul class="pagination">
+				{% if page > 1 %}
+					<li class="page-item"><a class="page-link" href={{prev_page(request.path)}}>Previous</a></li>
+				{% endif %}
+				<li class="page-item"><a class="page-link" href={{next_page(request.path)}}>Next</a></li>
+			</ul>
+		</nav>
 	</div>
 	<!--<div class="container-fluid">
 		<div class="model-inst">
