--- a/app/templates/subtypes.html
+++ b/app/templates/subtypes.html
@@ -98,6 +98,18 @@
 			</div>
 		{% endfor %}
 	</div>
+
+
+	<div id="mdb-pagination">
+		<nav>
+			<ul class="pagination">
+				{% if page > 1 %}
+					<li class="page-item"><a class="page-link" href={{prev_page(request.path)}}>Previous</a></li>
+				{% endif %}
+				<li class="page-item"><a class="page-link" href={{next_page(request.path)}}>Next</a></li>
+			</ul>
+		</nav>
+	</div>
 <!--
 	<div class="container-fluid">
 		<div class="model-inst">
